--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             background: url('itsv1.jpg') no-repeat center center fixed;
             background-size: cover;
+            background-position: top center;
             display: flex;
             justify-content: center;
             align-items: center;
