--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Valentine's Day</title>
     <style>
         body {
-            background: url('itsv1.jpg') no-repeat center center fixed;
+            background: url('too.gif') no-repeat center center fixed;
             background-size: cover;
             background-position: top center;
             display: flex;
