--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     right: 20px; /* Adjust for spacing */
     top: 50%;
     transform: translateY(-50%);
-    width: 400px; /* Adjust size */
-    height: auto;
+    width: 200px; /* Adjust size */
+    height: 150px;
 }
     </style>
 </head>
