--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine's Day</title>
     <style>
+        h1 {
+            font-size: 20px;
+        }
         body {
             background: url('too.gif') no-repeat center center fixed;
             background-size: cover;
