--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Valentine's Day</title>
     <style>
         h1 {
-            font-size: 50px;
+            font-size: 60px;
+            top: 40%;
         }
         body {
             background: url('too.gif') no-repeat center center fixed;
