--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         h1 {
             font-size: 60px;
-            top: 17%;
+            top: 17px;
         }
         body {
             background: url('too.gif') no-repeat center center fixed;
