--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Valentine's Day</title>
     <style>
         h1 {
+            position: absolute;
             font-size: 60px;
-            top: 17px;
+            top: 35px;
         }
         body {
             background: url('too.gif') no-repeat center center fixed;
