--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Valentine's Day</title>
     <style>
         h1 {
-            position: absolute;
+            position: relative;
             font-size: 60px;
-            top: 150px;
+            top: 50px;
         }
         body {
             background: url('too.gif') no-repeat center center fixed;
