--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         h1 {
             position: fixed;
             font-size: 60px;
-            top: 300px;
+            top: 550px;
         }
         body {
             background: url('too.gif') no-repeat center center fixed;
@@ -27,6 +27,7 @@
             margin-top: 20px;
         }
         button {
+            position: fixed;
             padding: 10px 20px;
             margin: 10px;
             font-size: 18px;
