--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Valentine's Day</title>
     <style>
         h1 {
-            position: fixed;
-            font-size: 60px;
-            top: 550px;
+    position: relative; /* Instead of fixed */
+    font-size: 60px;
+    margin-top: 50px; /* Adjusted positioning */
+    text-align: center;
         }
         body {
             background: url('too.gif') no-repeat center center fixed;
@@ -27,13 +28,12 @@
             margin-top: 20px;
         }
         button {
-            position: fixed;
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
+    padding: 10px 20px;
+    margin: 10px;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
         }
         .yes {
             background-color: #ff4d4d;
