--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             font-family: Arial, sans-serif;
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            overflow: hidden;
         }
         .buttons {
             margin-top: 20px;
