--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <img src="itsv2.gif" alt="Valentine GIF" class="side-gif">
     <div class="buttons">
         <button class="yes" onclick="alert('Yay! ❤️')">Yes</button>
-        <button class="busy" onclick="alert('Maybe next time 😢')">I'm Busy</button>
+        <button class="busy" onclick="alert('Maybe next time 😢')">I'm Busy <br> are you really 👉👈🥺</button>
     </div>
 </body>
 </html>
