--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <h1>Will you be my Valentine?</h1>
     <img src="itsv2.gif" alt="Valentine GIF" class="side-gif">
     <div class="buttons">
-        <button class="yes" onclick="alert('Yay! ❤️')">Yes</button>
-        <button class="busy" onclick="alert('Maybe next time 😢')">I'm Busy <br> are you really 👉👈🥺</button>
+        <button class="yes" onclick="alert('LESS GOOO')">Yeah 😋</button>
+        <button class="busy" onclick="alert('tutha hua 😔')">I'm Busy <br> (are you really 👉👈🥺)</button>
     </div>
 </body>
 </html>
