--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             background-color: #ff4d4d;
             color: white;
             height: 150px;
-            width: 150px;
+            width: 200px;
+            font-size: 80px;
         }
         .busy {
             background-color: gray;
