--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         .busy {
             background-color: gray;
             color: white;
+            height: 20;
         }
         .side-gif {
     position: absolute;
