--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         .busy {
             background-color: gray;
             color: white;
-            height: 400;
+            height: 300px;
             
         }
         .side-gif {
