--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         .busy {
             background-color: gray;
             color: white;
-            height: 150px;
+            height: 100px;
+            font-size: 34px;
             
         }
         .side-gif {
