--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     cursor: pointer;
         }
         .yes {
+            position: relative;
+            top: 10px;
             background-color: #ff4d4d;
             color: white;
             height: 110px;
