--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             align-items: center;
             height: 100vh;
             flex-direction: column;
-            font-family: Arial, sans-serif;
+            font-family: Century, sans-serif;
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             overflow: hidden;
