--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         h1 {
     position: relative; /* Instead of fixed */
     font-size: 60px;
-    margin-top: 150px; /* Adjusted positioning */
+    margin-top: 180px; /* Adjusted positioning */
     text-align: center;
         }
         body {
@@ -37,6 +37,8 @@
     cursor: pointer;
         }
         .yes {
+            position: relative;
+            top: 50px;
             background-color: #ff4d4d;
             color: white;
             height: 110px;
@@ -45,7 +47,7 @@
         }
         .busy { 
             position: relative;
-            top: 20px;
+            top: 50px;
             background-color: gray;
             color: white;
             height: 110px;
