--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         h1 {
     position: relative; /* Instead of fixed */
     font-size: 60px;
-    margin-top: 250px; /* Adjusted positioning */
+    top: 60px; /* Adjusted positioning */
     text-align: center;
         }
         body {
