--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         h1 {
     position: relative; /* Instead of fixed */
     font-size: 60px;
-    top: 80px; /* Adjusted positioning */
+    margin-top: 80px; /* Adjusted positioning */
     text-align: center;
         }
         body {
