--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         h1 {
             font-size: 60px;
-            margin-top: 100px; /* Moves the h1 down */
+            margin-top: 50%; /* Moves the h1 down */
             text-align: center;
         }
         body {
@@ -32,6 +32,7 @@
             cursor: pointer;
         }
         .yes {
+            top: 60%
             background-color: #ff4d4d;
             color: white;
             height: 110px;
@@ -39,6 +40,7 @@
             font-size: 40px;
         }
         .busy { 
+            top: 60%
             background-color: gray;
             color: white;
             height: 110px;
