--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Valentine's Day</title>
     <style>
         h1 {
+            position: relative;
+            top: 100px;
             font-size: 60px;
-            margin-top: 50%; /* Moves the h1 down */
             text-align: center;
         }
         body {
@@ -32,6 +33,8 @@
             cursor: pointer;
         }
         .yes {
+            position: relative;
+            top: 200px;
             background-color: #ff4d4d;
             color: white;
             height: 110px;
@@ -39,6 +42,8 @@
             font-size: 40px;
         }
         .busy { 
+            position: relative;
+            top: 200px;
             background-color: gray;
             color: white;
             height: 110px;
