--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         h1 {
             position: relative;
-            top: 50%;
+            top: 50vh;
             font-size: 60px;
             text-align: center;
         }
@@ -34,7 +34,7 @@
         }
         .yes {
             position: relative;
-            top: 55%;
+            top: 55vh;
             background-color: #ff4d4d;
             color: white;
             height: 110px;
@@ -43,7 +43,7 @@
         }
         .busy { 
             position: relative;
-            top: 55.5%;
+            top: 55.5vh;
             background-color: gray;
             color: white;
             height: 110px;
