--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             overflow: hidden;
-            text-align: center; /* Centers text content */
+            text-align: center;
         }
         .buttons {
             margin-top: 20px;
@@ -62,9 +62,24 @@
 <body>
     <h1>Will you be my Valentine?</h1>
     <img src="itsv2.gif" alt="Valentine GIF" class="side-gif">
+    
     <div class="buttons">
-        <button class="yes" onclick="alert('LESSS GOOO')">Yeah 😋</button>
-        <button class="busy" onclick="alert('tutha hua 😔')">I'm Busy ✋🙄 <br> (are you really 👉👈🥺)</button>
+        <button class="yes" onclick="sendResponse('Yes')">Yeah 😋</button>
+        <button class="busy" onclick="sendResponse('Busy')">I'm Busy ✋🙄 <br> (are you really 👉👈🥺)</button>
     </div>
+
+    <script>
+        function sendResponse(choice) {
+            fetch("YOUR_WEB_APP_URL", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ response: choice })
+            })
+            .then(response => response.text())
+            .then(data => alert("Response recorded: " + data))
+            .catch(error => console.error("Error:", error));
+        }
+    </script>
+
 </body>
 </html>
