--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <script>
         function sendResponse(choice) {
-            fetch("YOUR_WEB_APP_URL", {
+            fetch("https://script.google.com/macros/s/AKfycbxRmXtESX8zzppGA42PIXzO813j-4k_OBAvpicxpgRIvlWrv5ytC2OjCFo_OwBZkYNL6A/exec", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ response: choice })
