--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <script>
     function sendResponse(choice) {
-        fetch("YOUR_WEB_APP_URL", {
+        fetch("https://script.google.com/macros/s/AKfycbxgcouB5oyQEGhGV-VOUwHbJMteoQmGxfMuzLBiRWLvJTOMCD0lERAGD10E_wusCfUFGg/exec", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
