--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +19,7 @@
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             overflow: hidden;
-            text-align: center; /* Centers text content */
+            text-align: center;
         }
         .buttons {
             margin-top: 20px;
@@ -58,6 +57,16 @@
             width: 300px;
             height: 300px;
         }
+        .music-btn {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background-color: #ff4d4d;
+            color: white;
+            font-size: 20px;
+            padding: 10px 15px;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
@@ -67,5 +76,29 @@
         <button class="yes" onclick="alert('LESSS GOOO')">Yeah 😋</button>
         <button class="busy" onclick="alert('tutha hua 😔')">I'm Busy ✋🙄 <br> (are you really 👉👈🥺)</button>
     </div>
+
+    <!-- Background Music -->
+    <audio id="bg-music" loop autoplay>
+        <source src="httyd.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
+    <!-- Music Control Button -->
+    <button class="music-btn" onclick="toggleMusic()">🔊 Pause Music</button>
+
+    <script>
+        let music = document.getElementById("bg-music");
+        let musicBtn = document.querySelector(".music-btn");
+
+        function toggleMusic() {
+            if (music.paused) {
+                music.play();
+                musicBtn.innerHTML = "🔊 Pause Music";
+            } else {
+                music.pause();
+                musicBtn.innerHTML = "🎵 Play Music";
+            }
+        }
+    </script>
 </body>
 </html>
