--- a/index.html
+++ b/index.html
@@ -59,19 +59,6 @@
             padding: 10px 15px;
             border-radius: 10px;
         }
-        
-        let music = document.getElementById("bg-music");
-        let musicBtn = document.querySelector(".music-btn");
-
-        function toggleMusic() {
-            if (music.paused) {
-                music.play();
-                musicBtn.innerHTML = "🔊 Pause Music";
-            } else {
-                music.pause();
-                musicBtn.innerHTML = "🎵 Play Music";
-            }
-        }
     </style>
 </head>
 <body>
@@ -89,5 +76,22 @@
 
     <!-- Music Control Button -->
     <button class="music-btn" onclick="toggleMusic()">🔊 Pause Music</button>
+
+    
+     <style>
+
+            let music = document.getElementById("bg-music");
+        let musicBtn = document.querySelector(".music-btn");
+
+        function toggleMusic() {
+            if (music.paused) {
+                music.play();
+                musicBtn.innerHTML = "🔊 Pause Music";
+            } else {
+                music.pause();
+                musicBtn.innerHTML = "🎵 Play Music";
+            }
+        }
+     </style>
 </body>
 </html>
