--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         .yes {
             position: relative;
             top: 52vh;
-            background-color: #ff4d4d;
+            background-color: #66c2ff;
             color: white;
             height: 110px;
             width: 300px;
@@ -44,7 +44,7 @@
         .busy { 
             position: relative;
             top: 53.15vh;
-            background-color: gray;
+            background-color: red;
             color: white;
             height: 110px;
             font-size: 38px;
