--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             background-size: cover;
             background-position: top center;
             font-family: Century, sans-serif;
-            color: white;
+            color: black;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
             overflow: hidden;
             text-align: center;
