--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         .yes {
             position: relative;
             top: 52vh;
-            background-color: #66c2ff;
-            color: black;
+            background-color: #ff4d4d;
+            color: white;
             height: 110px;
             width: 300px;
             font-size: 40px;
@@ -44,51 +44,38 @@
         .busy { 
             position: relative;
             top: 53.15vh;
-            background-color: red;
+            background-color: gray;
             color: white;
             height: 110px;
             font-size: 38px;
         }
-        .music-btn {
-            position: fixed;
-            bottom: 20px;
-            left: 20px;
-            background-color: #ff4d4d;
-            color: white;
-            font-size: 20px;
-            padding: 10px 15px;
-            border-radius: 10px;
+        .secret {
+            display: none;
+            font-size: 30px;
+            margin-top: 20px;
+            color: yellow;
         }
     </style>
 </head>
 <body>
     <h1>Will you be my Valentine?</h1>
     <div class="buttons">
-        <button class="yes" onclick="alert('LESSS GOOO')">Yeah 😋</button>
+        <button class="yes" onclick="revealSecret()">Yeah 😋</button>
         <button class="busy" onclick="alert('tutha hua 😔')">I'm Busy ✋🙄 <br> (are you really 👉👈🥺)</button>
     </div>
 
-    <!-- Background Music -->
-    <audio id="bg-music" loop autoplay>
-        <source src="httyd.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
-
-    <!-- Music Control Button -->
-    <button class="music-btn" onclick="toggleMusic()">🔊 Pause Music</button>
+    <!-- Secret Message -->
+    <p id="secret-message" class="secret">I knew you'd say yes! ❤️</p>
 
     <script>
-        let music = document.getElementById("bg-music");
-        let musicBtn = document.querySelector(".music-btn");
+        let clickCount = 0;
 
-        function toggleMusic() {
-            if (music.paused) {
-                music.play();
-                musicBtn.innerHTML = "🔊 Pause Music";
-            } else {
-                music.pause();
-                musicBtn.innerHTML = "🎵 Play Music";
+        function revealSecret() {
+            clickCount++;
+            if (clickCount === 3) {
+                document.getElementById("secret-message").style.display = "block";
             }
+            alert('LESSS GOOO');
         }
     </script>
 </body>
