--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <!-- Secret Message -->
-    <p id="secret-message" class="secret">I knew you'd say yes! ❤️</p>
+    <p id="secret-message" class="secret">hehe so many yes'es 😋</p>
 
     <!-- Background Music -->
     <audio id="bg-music" loop autoplay>
