--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            position: absolute;
         }
         .yes {
             position: relative;
@@ -42,12 +43,12 @@
             font-size: 40px;
         }
         .busy {
-            position: relative;
-            top: 53.15vh;
+            position: absolute;
             background-color: gray;
             color: white;
             height: 110px;
             font-size: 38px;
+            transition: 0.3s ease-in-out;
         }
         .music-btn {
             position: fixed;
@@ -59,19 +60,7 @@
             padding: 10px 15px;
             border-radius: 10px;
         }
-        .secret-msg {
-            display: none;
-            font-size: 30px;
-            color: yellow;
-            margin-top: 60px;
-            opacity: 0;
-            animation: fadeIn 2s forwards;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        /* Modal Styles */
+        /* Bigger Modal Styles */
         .modal {
             display: none;
             position: fixed;
@@ -85,16 +74,21 @@
         .modal-content {
             background-color: white;
             color: black;
-            padding: 20px;
-            border-radius: 10px;
+            padding: 80px; /* Increased padding */
+            border-radius: 20px;
             text-align: center;
-            width: 300px;
-            margin: 20% auto;
+            width: 80%; /* Made it wider */
+            height: 60%; /* Made it taller */
+            margin: 10% auto;
+            font-size: 80px; /* Larger Text */
         }
         .close {
             cursor: pointer;
-            font-size: 20px;
+            font-size: 50px; /* Bigger Close Button */
             color: red;
+            position: absolute;
+            right: 20px;
+            top: 20px;
         }
     </style>
 </head>
@@ -102,10 +96,8 @@
     <h1>Will you be my Valentine?</h1>
     <div class="buttons">
         <button class="yes" onclick="showLove()">Yeah 😋</button>
-        <button class="busy" onclick="showBusyMessage()">I'm Busy ✋🙄 <br> (are you really 👉👈🥺)</button>
+        <button class="busy" id="busyButton" onclick="moveButton()">I'm Busy ✋🙄 <br> (are you really 👉👈🥺)</button>
     </div>
-
-    <p id="secret-msg" class="secret-msg">hehe so many yes's 😋</p>
 
     <!-- Background Music -->
     <audio id="bg-music" loop>
@@ -116,19 +108,11 @@
     <!-- Music Control Button -->
     <button class="music-btn" onclick="toggleMusic()">🔊 Pause Music</button>
 
-    <!-- Pop-up Modal -->
+    <!-- Big Pop-up Modal -->
     <div id="loveModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <p>LESSS GOOO! 💖</p>
-        </div>
-    </div>
-
-    <!-- Pop-up Modal for Busy Button -->
-    <div id="busyModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeBusyModal()">&times;</span>
-            <p>tutha hua 😔</p>
         </div>
     </div>
 
@@ -138,7 +122,6 @@
     <script>
         let music = document.getElementById("bg-music");
         let musicBtn = document.querySelector(".music-btn");
-        let yesClickCount = 0;
 
         function toggleMusic() {
             if (music.paused) {
@@ -157,28 +140,28 @@
             }
         }, { once: true });
 
-        // Show Modal, Confetti & Secret Message
+        // Show Modal & Confetti
         function showLove() {
             document.getElementById("loveModal").style.display = "block";
             confetti();
-            yesClickCount++;
-
-            if (yesClickCount >= 3) {
-                document.getElementById("secret-msg").style.display = "block";
-            }
         }
 
-        // Show Busy Modal
-        function showBusyMessage() {
-            document.getElementById("busyModal").style.display = "block";
-        }
-
-        // Close Modals
+        // Close Modal
         function closeModal() {
             document.getElementById("loveModal").style.display = "none";
         }
-        function closeBusyModal() {
-            document.getElementById("busyModal").style.display = "none";
+
+        // Move the "I'm Busy" Button Randomly
+        function moveButton() {
+            let button = document.getElementById("busyButton");
+            let maxWidth = window.innerWidth - button.offsetWidth;
+            let maxHeight = window.innerHeight - button.offsetHeight;
+            
+            let newX = Math.random() * maxWidth;
+            let newY = Math.random() * maxHeight;
+            
+            button.style.left = newX + "px";
+            button.style.top = newY + "px";
         }
     </script>
 </body>
