--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- Modal -->
     <div id="myModal" class="modal">
         <div class="modal-content">
-            <h2>LESSS GOOO 😍</h2>
+            <h2>LESSS GOOO 🤭🤭😋😍</h2>
             <img src="us.jpeg" alt="Us Together">
             <br>
             <button class="close" onclick="closeModal()">Close</button>
